refactor: ISO3 verifications and lookups